iac/demo/kyvernocon/mistake1_blocking_all_workloads.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-all-workloads
  labels:
    policy: deny-all-workloads
    created-by: vinod
    talk: kyvernocon-2025
spec:
  validationFailureAction: Enforce
  rules:
    - name: block-all
      match:
        resources:
          kinds:
            - Pod
            - Deployment
            - StatefulSet
      validate:
        message: "All workloads are blocked!"
        pattern:
          spec:
            containers: []
