iac/demo/kyvernocon/solution2_infinite_policy_loops.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: infinite-loop-fixed
  labels:
    policy: infinite-loop-fixed
    created-by: vinod
    talk: kyvernocon-2025
spec:
  validationFailureAction: Enforce
  rules:
    - name: mutate-label
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          selector:
            matchLabels:
              loop: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            labels:
              loop: "true"
