iac/demo/kyvernocon/solution3_bad_patching.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: bad-patch-fixed
  labels:
    policy: bad-patch-fixed
    created-by: vinod
    talk: kyvernocon-2025
spec:
  validationFailureAction: Enforce
  rules:
    - name: correct-patch-path
      match:
        resources:
          kinds:
            - Pod
      mutate:
        patchStrategicMerge:
          spec:
            containers:
            - name: nginx
              resources:
                limits:
                  cpu: "500m"
